--- a/docs/licencjat.tex
+++ b/docs/licencjat.tex
@@ -413,6 +413,25 @@ Currently deep neural networks get better results than state-of-the-art algorith
 			\item code review for collegues
 		\end{itemize}
 
+
+\chapter{Nie wiem gdzie to wsadzić}
+    One of the advantages of using binarized neural networks is that we can save trained weights as binary numbers and store them on a device with limited resources. In this section, it is discussed exactly how much space we can save, when using different kinds of binarization.
+    
+    \section{Binarized weights}
+        In this case we store binary value instead of a floating point for each weight. In addition, we also need to store coefficients $\alpha$ which are floating point numbers. The amount of these coefficients depends on the type of binarization we perform. Computing $\alpha$ for each kernel compared to computing it foe each layer gives us slightly worse space and computation time savings, but yields better accuracy.
+        
+        General formula for space savings is as follows (assuming we use 32 bit floating point numbers):
+        $$s_m =  \frac{space_{bin}}{space_{float}} = \frac{\#_\alpha * 32bit + \#_{weights}*1bit}{\#_{weights} * 32bit} $$
+        
+        \subsection{Different $\alpha$ for each layer }
+        In this case $\#_\alpha = \#_{layers}$. So in in LENET, where $\#_{layers} = 4$ and $\#_{weights} = 1642272$ we have $s_m = 1/(31.9975)$.
+        
+        \subsection{Different $\alpha$ for each kernel }
+        In this case we have $\#_\alpha = \#_{kernels}$. To compute the space savings for LENET model, we can observe that the number of weights is same as above, but $\#_\alpha = 32+32+1024+10 = 1098$, so $s_m = 1/(31.3297)$.
+	    
+	    \section{Binarized inputs and weights (XNORNET)}
+	    Using this kind of binarization gives same savings as binarized weights, as we have to compute all $\beta$ coefficients during inference (they are not saved). Still, the space gain is around 32x which is an excellent result.
+
 \begin{thebibliography}{99}
 \addcontentsline{toc}{chapter}{Bibliography}
 
